# lab

./: Dockerfile  model.joblib  pyproject.toml
.github/workflows/: ci.yml
src/lab/: appli.py  model.py
tests/: test_model.py
